2007-31-01  Richard Dale  <rdale@foton.es>

	* Changed the uics code generation to use C# properties

2007-30-01  Arno Rehn  <arno@arnorehn.de>

	* Fixed off-by-one mistake when invoking signals in SmokeInvocation.cs
	  and qyoto.cpp

2007-30-01  Richard Dale  <rdale@foton.es>

	* Fixed regressions caused by adding signal return values
	* Added a QDBusVariant class and marshalling for it
	* The complexpong example still doesn't return a QDBusVariant value

2007-29-01  Richard Dale  <rdale@foton.es>

	* Added reply values when emitting signals
	* Some static methods were being dropped because they had the same
	  name as property names. So make the static methods start with a
	  lower case letter and keep them.
	* When marshalling a QDBusVariant, special case as a QVariant as it
	  doesn't exist in the Smoke library, but is needed for QtDBus support.
	* Added a not quite working qdbus/complexpingpong example

2007-29-01  Arno Rehn  <arno@arnorehn.de>

	* Fixed compiler options in examples to use -r instead of -addmodule

2007-28-01  Richard Dale  <rdale@foton.es>

	* Commented out the QMetaObject.InvokeMethod() call in the pong.cs
	  example as it causes a crash
	* Fixed bug where the name of a slot was being lost when passed to
	  Invoke slot as a temporary 'const char *' that was being deleted
	  before it could be used.
	* In the C# to C++ list marshaller the temporary list of 'void*'s
	  was not being deleted. If a C++ list element instance aleady has
	  a mapping onto a C# instance, then use that.
	* Added a Q_PROPERTY atttribute to C# properties, restored Q_SLOT
	  properties which were not being generated from slots labelled
	  Q_SLOTS.

2007-26-01  Richard Dale  <rdale@foton.es>

	* Added the qdbus/listnames example
	* Added the qdbus/pingpong example
	* When the type signature of a slot was being derived from the types of
	  the C# arguments, a C# string should map onto 'QString' and not 'string'

2007-25-01  Richard Dale  <rdale@foton.es>
